# ais_feature_extraction

./: README.md  pyproject.toml
data/: 2020_07_01_sample_1000.csv
src/ais_feature_extraction/: add_missing_ts.py  data_normalisation.py  data_standarisation.py  ts_extraction.py  utm_module.py
src/aisdistance/: goal_distance.py  ts_extraction.py
