# Poetry build chain
[tool.poetry]
name = "ais_feature_extraction"
version = "0.1.0"
description = ""
authors = ["Hadil Romdhane <romdhanehadil7@gmail.com>"]
readme = "README.md"
#packages = [{ include = "aisplanner" }]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17.2"
pandas = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
